--- a/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
+++ b/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
@@ -474,16 +474,13 @@ Supplementary Information: A complete compilation of results and R code for simu
   issn = {1053-8119},
   shorttitle = {The human voice areas},
   doi = {10.1016/j.neuroimage.2015.06.050},
-  abstract = {fMRI studies increasingly examine functions and properties of non-primary areas of human auditory cortex. However there is currently no standardized localization procedure to reliably identify specific areas across individuals such as the standard `localizers' available in the visual domain. Here we present an fMRI `voice localizer' scan allowing rapid and reliable localization of the voice-sensitive `temporal voice areas' (TVA) of human auditory cortex. We describe results obtained using this standardized localizer scan in a large cohort of normal adult subjects. Most participants (94\%) showed bilateral patches of significantly greater response to vocal than non-vocal sounds along the superior temporal sulcus/gyrus (STS/STG). Individual activation patterns, although reproducible, showed high inter-individual variability in precise anatomical location. Cluster analysis of individual peaks from the large cohort highlighted three bilateral clusters of voice-sensitivity, or ``voice patches'' along posterior (TVAp), mid (TVAm) and anterior (TVAa) STS/STG, respectively. A series of extra-temporal areas including bilateral inferior prefrontal cortex and amygdalae showed small, but reliable voice-sensitivity as part of a large-scale cerebral voice network. Stimuli for the voice localizer scan and probabilistic maps in MNI space are available for download.},
-  timestamp = {2016-05-03T07:43:38Z},
   urldate = {2015-08-13},
   journal = {NeuroImage},
   author = {Pernet, Cyril R. and McAleer, Phil and Latinus, Marianne and Gorgolewski, Krzysztof J. and Charest, Ian and Bestelmeyer, Patricia E. G. and Watson, Rebecca H. and Fleming, David and Crabbe, Frances and Valdes-Sosa, Mitchell and Belin, Pascal},
   month = oct,
   year = {2015},
   keywords = {Amygdala,Auditory Cortex,Functional Magnetic Resonance Imaging,Inferior prefrontal cortex,Superior temporal gyrus,Superior temporal sulcus,Voice},
-  pages = {164--174},
-  file = {Pernet et al_2015_The human voice areas.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/K5P9IBIC/Pernet et al_2015_The human voice areas.pdf:application/pdf;Pernet et al_2015_The human voice areas.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TMDRCDKR/Pernet et al_2015_The human voice areas.pdf:application/pdf;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/CPWNAN2U/S1053811915005558.html:text/html;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/DUHB2G28/S1053811915005558.html:text/html}
+  pages = {164--174}
 }
 
 @book{breiman_classification_1984,
