--- a/Round3/Manuscript-IEEE/bare_jrnl.tex
+++ b/Round3/Manuscript-IEEE/bare_jrnl.tex
@@ -864,7 +864,7 @@ From Figure~\ref{fig:file12}, we see that also for the mixture class of \cite{go
 \section{Neuroimaging Example}
 \label{sec:example}
 
-Figure~\ref{fig:read_data} is an application of the Srivastava two-group test, and a linear SVM accuracy-test, to the neuroimaging data of \cite{pernet_human_2015}. 
+Figure~\ref{fig:read_data} is an application of (a) the Srivastava two-group test, and (b) a linear SVM accuracy-test, to the neuroimaging data of Pernet et al. \cite{pernet_human_2015}. 
 The authors of \cite{pernet_human_2015} collected fMRI data while subjects were exposed to the sounds of human speech (vocal), and other non-vocal sounds. 
 Each subject was exposed to $20$ sounds of each type, totaling in $n=40$ trials.
 The study was rather large and consisted of about $200$ subjects.
