--- a/Round3/Manuscript-IEEE/bare_jrnl.tex
+++ b/Round3/Manuscript-IEEE/bare_jrnl.tex
@@ -904,7 +904,7 @@ We emphasize that both test statistics were compared with the same permutation s
 \label{sec:discussion}
 
 We have set out to understand which of the tests is more powerful: accuracy-tests or two-group tests. 
-Our current observation is that in various setups, accuracy-tests are never optimal in high-dim; there is always a two-group test that dominates in power.
+Our current observation is that we have never found accuracy tests to be optimal in high-dim regimes; there was always a two-group test that dominated in power.
 We conjecture that they are never optimal, simply because of the needless discretization of the test statistic. 
 Two-group tests are also typically easier to implement, and faster to run, since no resampling is required. 
 Statistics such as \emph{Schafer}\cite{schafer_shrinkage_2005}, \emph{Goeman}\cite{goeman2006testing}, \emph{Srivastava}\cite{srivastava_multivariate_2007}, \emph{dCOV}\cite{szekely2004testing}, and \emph{Gretton}\cite{gretton_kernel_2012-1}, are particularly well suited for detecting dense signal in high-dim.
