--- a/Round3/Manuscript-IEEE/bare_jrnl.tex
+++ b/Round3/Manuscript-IEEE/bare_jrnl.tex
@@ -1204,9 +1204,10 @@ He is a member of Ben-Gurion University's Zlotowski Center for Neuroscience.
 % biographies
 %\newpage
 
-\begin{IEEEbiographynophoto}
-	{Roee Gilron} is currently a postdoc in the Starr Lab at- UCSF. His research probes various aspects of motor control in health and disease using functional imaging and deep brain stimulation (DBS) in Parkinson's disease. He has developed methods for multidimensional analysis of neuroimaging data and is currently developing platforms for use in adaptive DBS. He received his B.S degree in Neuroscience from Brandeis University and completed his PhD in Cognitive Neuroscience from Tel Aviv University (TAU). 
-\end{IEEEbiographynophoto}
+
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{art/RoeePortrait}}]
+		{Roee Gilron} is currently a postdoc in the Starr Lab at- UCSF. His research probes various aspects of motor control in health and disease using functional imaging and deep brain stimulation (DBS) in Parkinson's disease. He has developed methods for multidimensional analysis of neuroimaging data and is currently developing platforms for use in adaptive DBS. He received his B.S degree in Neuroscience from Brandeis University and completed his PhD in Cognitive Neuroscience from Tel Aviv University (TAU). 
+\end{IEEEbiography}
 
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{art/mukamel}}]
