--- a/Round3/Manuscript-IEEE/bare_jrnl.tex
+++ b/Round3/Manuscript-IEEE/bare_jrnl.tex
@@ -1194,11 +1194,11 @@ He is a member of Ben-Gurion University's Zlotowski Center for Neuroscience.
 \end{IEEEbiography}
 
 % if you will not have a photo at all:
-\begin{IEEEbiographynophoto}
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{art/benjamini}}]
 	{Yuval Benjamini} is a senior lecturer at the Department of Statistics in the Hebrew University of Jerusalem, Israel. 
 	His research interests include high-dimensional prediction models and spatial statistics, specializing in the analysis of neuroscience and genomic data. 
 	YB received his Ph.D. degree in Statistics from UC Berkeley, and was a Stein Fellow at the Department of Statistics at Stanford University. 
-\end{IEEEbiographynophoto}
+\end{IEEEbiography}
 
 % insert where needed to balance the two columns on the last page with
 % biographies
