--- a/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
+++ b/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
@@ -1918,3 +1918,11 @@ Contact: tongt@hkbu.edu.hk},
 	year={2018},
 	publisher={National Acad Sciences}
 }
+
+
+@book{cover2012elements,
+	title={Elements of information theory},
+	author={Cover, Thomas M and Thomas, Joy A},
+	year={2012},
+	publisher={John Wiley \& Sons}
+}
