--- a/Round3/Manuscript-IEEE/bare_jrnl.tex
+++ b/Round3/Manuscript-IEEE/bare_jrnl.tex
@@ -28,8 +28,12 @@
         Roy~Mukamel,~\IEEEmembership{}
         and~Jelle~J.~Goeman,~\IEEEmembership{}%
 
-\thanks{JDR was supported by the ISF 900/60 research grant.}% <-this % stops a space
-\thanks{JDR and J. Doe are with Anonymous University.}% <-this % stops a space
+\thanks{JDR was supported by the ISF 900/60 and 924/16 research grants.}% <-this % stops a space
+\thanks{JDR is with with the Dept. of IE\&M at Ben-Gurion University of the Negev (johnros@bgu.ac.il). 
+	YB is with with the Dept. Statistics at the Hebrew University of Jerusalem.
+	RG is with Starr Lab at the UCSF.
+	RM is with the Psychology Dept. at Tel Aviv University. 
+	JJG is with the Leiden University Medical Center,}% <-this % stops a space
 \thanks{Manuscript received April 19, 2005; revised August 26, 2015.}}
 
 % note the % following the last \IEEEmembership and also \thanks - 
@@ -86,7 +90,7 @@ This method of signal detection is particularly popular in neuroimaging and gene
 We provide evidence that using a classifier's accuracy as a test statistic can be an underpowered strategy for finding differences between populations, compared to a bona-fide statistical test.
 It is also computationally more demanding than a statistical test. 
 Via simulation, we compare test statistics that are based on classification accuracy, to others based on multivariate test statistics. 
-We find that probability of detecting differences between two distributions is lower for accuracy based statistics.
+We find that the probability of detecting differences between two distributions is lower for accuracy based statistics.
 We examine several candidate causes for the low power of accuracy-tests. 
 These causes include: the discrete nature of the accuracy-test statistic, the type of signal accuracy-tests are designed to detect, their inefficient use of the data, and their regularization. 
 When the purposes of the analysis is not signal detection, but rather, the evaluation of a particular classifier, we suggest several improvements to increase power. 
@@ -120,9 +124,8 @@ signal-detection, multivariate-testing, supervised-learning, hypothesis-testing,
 
 \IEEEPARstart{M}{any} neuroscientists and geneticists detect signal by fitting a classifier and testing whether its prediction accuracy is better than chance. 
 The workflow consists of fitting a classifier, estimating its predictive accuracy using cross validation, and testing the hypothesis that this accuracy can be attributed to chance alone. 
-This general idea has been promoted by Friedman in the statistical literature \cite{friedman2003multivariate}, and separately by Eric, Ojala and Lopez in the machine-learning literature \cite{eric2008testing,ojala_permutation_2010,lopez2016revisiting}.
-Examples in the genetics literature include
-\cite{golub_molecular_1999,slonim_class_2000,radmacher_paradigm_2002,mukherjee_estimating_2003,juan_prediction_2004,jiang_calculating_2008,yu2007two}.
+This general idea has been promoted in the statistical literature \cite{friedman2003multivariate}, and separately by in the machine-learning literature \cite{eric2008testing,ojala_permutation_2010,lopez2016revisiting}.
+Examples in the genetics literature include \cite{golub_molecular_1999,slonim_class_2000,radmacher_paradigm_2002,mukherjee_estimating_2003,juan_prediction_2004,jiang_calculating_2008,yu2007two}.
 Other examples include speaker verification \cite{gretton_kernel_2012-1}, 
 text classification \cite{dhillon2003divisive,lopez2016revisiting}, distinguishing between facial expressions \cite{lopez2016revisiting}, data integration \cite{gretton_kernel_2012-1}, record linkage in databases systems \cite{gretton_kernel_2012-1,hall2002permutation,zhou2018statistical}, optical character recognition \cite{perez2009estimation}, multimedia \cite{moreno2004kullback}, and functional data analysis \cite{hall2002permutation}.
 
@@ -140,7 +143,7 @@ As put by Pereira et al.~\cite{pereira_machine_2009}:
 	... the problem of deciding whether the classifier learned to discriminate the classes can be subsumed into the more general question as to whether there is evidence that the underlying distributions of each class are equal or not.
 \end{quote}
 A practitioner may thus approach the signal detection problem with a two-group hypothesis test.
-Multivariate two-groups hypothesis-tests may be divided into tests for equality of location (i.e. means), and two-sample goodness of fit tests (i.e., equality of the two whole distribution, GOF in short).
+Multivariate two-groups hypothesis-tests may be divided into tests for equality of location (i.e. means), and two-sample goodness of fit tests (equality of the two whole distribution, GOF in short).
 The former generalizing the t-test, and the latter (roughly) generalizing Kolmogorov-Smirnov's test.
 
 
@@ -187,7 +190,7 @@ Asymptotic relative efficiency measures (ARE) are typically used by statistician
 ARE is the limiting ratio of the sample sizes required by two statistics to achieve similar power. 
 The authors of \cite{ramdas_classification_2016} derive the asymptotic power functions of the two test statistics, with which we are able to compute the ARE between Hotelling's $T^2$ (two-group) test and Fisher's LDA (accuracy) test.
 Theorem~14.7 of \cite{vaart_asymptotic_1998} relates asymptotic power functions to ARE.
-Using this theorem and the results of \cite{ramdas_classification_2016} we deduce that the ARE is lower bounded by $2 \pi \approx 6.3$. 
+Using this theorem and the results of \cite{ramdas_classification_2016} we deduce that the ARE is lower bounded by $2 \pi \approx 6.3$.[TODO: verify] 
 This means that Fisher's LDA requires at least $6.3$ times more samples to achieve the same (asymptotic) power as the $T^2$ test. 
 In this light, the accuracy-test is remarkably inefficient.  
 For comparison, the t-test is only $1.04$ more (asymptotically) efficient than Wilcoxon's rank-sum test \cite{lehmann_parametric_2009}, so that an ARE of $6.3$ is strong evidence in favor of the two-group test. 
@@ -321,7 +324,7 @@ We will now address these questions while bearing in mind that unlike the typica
 \paragraph{Cross validate or not}
 For the purpose of statistical testing, bias in $\hat\acc_{\algo}$ is not a problem, as long as it does not invalidate the error rate guarantees. 
 The underlying intuition is that if the same bias is introduced in all permutations, it will not affect the properties of the permutation test. 
-We will thus be considering both cross validated accuracies, and resubstitution accuracies.
+We will thus be considering both unbiased cross validated accuracies, and biased resubstitution accuracies.
 
 
 \paragraph{Balanced folding}
@@ -345,7 +348,7 @@ We fix the number of folds to $V=4$, and do dot discuss the effect of $V$ becaus
 
 Table~\ref{tab:collected} collects an initial battery of tests we will be comparing. 
 We selected the accuracy tests based on their popularity in the literature.
-We selected two-group tests based on their popularity, and so that various types of test statistics are represented: tests for dense and sparse shifts, GOF tests, covariance-aware and covariance-agnostic tests. 
+We selected two-group tests based on their popularity, and so that various types of test statistics are represented: tests for dense and sparse shifts, and GOF tests. 
 
 \begin{tcolorbox}
 	\centering
@@ -409,7 +412,7 @@ In each replication, we generate $n$ independent samples from a shift class
 \label{eq:distribution}
 \x_i = \mu \y_i + \eta_i,
 \end{align}
-where $\y_i \in \mathcal{Y}=\set{0,1}$ encodes the class of subject $i$, $\mu$ is a $p$-dimensional shift vector, the noise $\eta_i$ is distributed as $\gaussp{p}{0,\Sigma}$, the sample size $n=40$, and the dimension of the data is $p=23$. 
+where $\y_i \in \mathcal{Y}=\set{0,1}$ encodes the class of observation $i$, $\mu$ is a $p$-dimensional shift vector, the noise $\eta_i$ is distributed as $\gaussp{p}{0,\Sigma}$, the sample size $n=40$, and the dimension of the data is $p=23$. 
 The covariance $\Sigma=I$. 
 In this basic setup, reported in Figure~\ref{fig:simulation_1}, the shift effect is captured by $\mu$. 
 Shifts are dense and equal in all $p$ coordinates of $\mu$.
@@ -447,7 +450,7 @@ We may thus proceed and compare the power of each test statistic.
 \subsection{Power}
 \label{sec:power}
 
-Figure~\ref{fig:simulation_1}) we learn that in our simulation setup two-group tests are more powerful than accuracy-tests.
+From Figure~(\ref{fig:simulation_1}) we learn that in our simulation setup, two-group tests are more powerful than accuracy-tests.
 This is most notable for the intermediate signal strength (green triangles). 
 
 \begin{figure}[h]
@@ -471,7 +474,7 @@ This is most notable for the intermediate signal strength (green triangles).
 \label{sec:large-sample}
 
 We focus on high-dim--small-sample configurations because of our motivation in neuroimaging and genetics. 
-Our results, however hold also in high-dim--large-sample configurations.
+Our results, however, hold also in high-dim--large-sample configurations.
 To prove this point, we fix $p/n$ at $23/40$, and set $n=4,000, p=2,300$. 
 The results, reported in Figure~\ref{fig:large-sample}, are qualitatively similar to the high-dim--small-sample of Figure~\ref{fig:simulation_1}.
 
@@ -515,7 +518,6 @@ The results, reported in Figure~\ref{fig:large-sample}, are qualitatively simila
 \label{sec:heavytailed}
 The Neyman-Pearson Lemma (NPL) type reasoning that favors two-group location-tests over accuracy-tests in our simulations may fail when the data is not multivariate Gaussian.
 This is because Hotelling's $T^2$ statistic is no longer a generalized-likelihood-ratio test. 
-
 To check this, we replaced the multivariate Gaussian distribution of $\eta$ in Eq.(\ref{eq:distribution}) with a heavy-tailed multivariate-$t$ distribution with $3$ degrees of freedom.
 In this heavytailed setup, the dominance of the two-group tests was preserved, even if less evident than in the Gaussian case (Figure~\ref{fig:t_null}).
 
@@ -539,10 +541,9 @@ We now test the robustness of our results to the correlations in $x$.
 In terms of Eq.(\ref{eq:distribution}), $\Sigma$ will no longer be the identity matrix. 
 Some tests try to account for $\Sigma$ by estimating it. 
 Estimating $\Sigma$ reduces possible bias at the cost of some variance. 
-We thus do not know if the conclusions from the uncorrelated case (Fig.~\ref{fig:simulation_1}) we repeat themselves in the presence of correlation. 
+We thus do not know if the conclusions from the uncorrelated case (Fig.~\ref{fig:simulation_1}) repeat themselves in the presence of correlation. 
 
-Which test has more power: accuracy or two-group?
-We address this question using various correlation structures.
+We simulate using correlation structures.
 We also vary the direction of the signal, $\mu$, and distinguish between signal in high variance principal component (PC) of $\Sigma$ and in the low variance PC. 
 To keep the comparisons fair as the correlations vary, we kept $\Vert \mu \Vert_\Theta:=\sqrt{\mu'\Theta\mu}$ fixed.
 This matter is discussed in Section~\ref{sec:fix_snr}.
@@ -554,7 +555,7 @@ This holds true for various correlation structures: the short memory correlation
 
 When the signal is in the direction of the low variance PC, a different phenomenon appears.
 There is no clear preference between two-group or accuracy-tests.
-Instead the non-regularized tests are the clear victors. 
+Instead, the non-regularized tests are the clear victors. 
 This holds true for various correlation structures: the short memory correlations of $AR(1)$ in Figure~\ref{fig:dependence_12}, the long memory correlations of a Brownian motion in Figure~\ref{fig:dependence_22}, and the arbitrary correlation in Figure~\ref{fig:dependence_32}.
 We attribute this phenomenon to the bias introduced by the regularization, which masks the signal.
 This matter is further discussed in Section~\ref{sec:fix_snr}.
@@ -649,7 +650,6 @@ The \emph{Srivastava} statistic, for instance, is scalar invariant.
 It can be (roughly) thought of as the $l_2$ norm of the $p$-vector of coordinate-wise t-statistics.
 The \emph{Goeman} statistic, for instance, is not scalar invariant. 
 It can be (roughly) thought of as the $l_2$ norm of the $p$-vector of variable-wise mean differences.
-
 Under heteroskedasticity, the \emph{Goeman} statistic will give less importance to signal in the high-variance directions than signal in the low-variance directions. \emph{Srivastava} will give all coordinates the same importance.
 
 In Figure~\ref{fig:heteroskedastic_11} we can see the difference between the scalar-invariant \emph{Srivastava} and \emph{Goeman} statistics. We also see that two-group tests dominate accuracy-tests also in the heteroskedastic case. 
@@ -683,7 +683,10 @@ In Figure~\ref{fig:heteroskedastic_11} we can see the difference between the sca
 \label{sec:bootstrap}
 
 The more a test statistic is discretized, the more it's power diminishes. 
-This phenomenon is quite basic in information theory: the more coarse the coding, the smaller the divergence between two channels [TODO: add reference].
+This can be shown by observing that a classification is a quantization of a continuous prediction. 
+The information processing inequality thus applies \cite{cover2012elements}. 
+Because testing power is monotone in the mutual information, a non-quantized test statistic will have no less power than a quantized one. [TODO: verify]
+
 
 In V-fold CV, the discretization of the accuracy statistic is governed by the number of samples. 
 This is the case whenever resampling without replacement. 
@@ -725,7 +728,8 @@ It can also be seen that power increases with the number of bootstrap replicatio
 	\caption{\footnotesize
 		The same as Table~\ref{tab:collected} for bootstrapped accuracy estimates. 
 		bLOO is defined in~\ref{def:bloo}.
-		$B$ denotes the number of Bootstrap samples.} 
+		$B$ denotes the number of Bootstrap samples.
+		Accuracy-tests marked with a \cue.} 
 	\label{tab:collected_2}
 \end{tcolorbox}
 
@@ -759,8 +763,9 @@ By comparing the non-regularized $T^2$ to its regularized versions we see that i
 Regularization is achieved by shrinking, or thresholding, the entries of $\hat{\Sigma}$.
 Shrinking is used in the \emph{Schafer} statistic.
 Thresholding is used in the \emph{Goeman} and \emph{Srivastava} statistics.
-Can we do the same for classifiers? 
-To answer this question we augment the comparison with some accuracy-tests that have explicit covariance regularization in them. 
+
+Can we explicitly regularize the covariance estimate of a classifier?
+To answer this question we augment the simulation with some accuracy-tests that have explicit covariance regularization in them. 
 These include shrinkage based LDA \cite{pang_shrinkage-based_2009,ramey_high-dimensional_2016}, where Tikhonov regularization of $\hat \Sigma$ is used; just like the \emph{Schafer} statistic.
 We also try a diagonalized LDA~\cite{dudoit_comparison_2002}, also known as \emph{Gaussian Na\"ive Bayes}, which regularizes similarly to the \emph{Srivastava} and \emph{Goeman} statistics.
 
@@ -791,6 +796,7 @@ In \emph{svm.CV.cCV} this regularization is optimized with CV which leads us to 
 	\captionsetup{type=table}
 	\caption{\footnotesize
 		The same as Table~\ref{tab:collected} for regularized (high-dimensional) predictors. 
+		Accuracy tests marked with a \cue.
 	} 
 	\label{tab:collected_3}
 \end{tcolorbox}
