--- a/Round3/Manuscript-IEEE/bare_jrnl.tex
+++ b/Round3/Manuscript-IEEE/bare_jrnl.tex
@@ -767,7 +767,7 @@ Thresholding is used in the \emph{Goeman} and \emph{Srivastava} statistics.
 Can we explicitly regularize the covariance estimate of a classifier?
 To answer this question we augment the simulation with some accuracy-tests that have explicit covariance regularization in them. 
 These include shrinkage based LDA \cite{pang_shrinkage-based_2009,ramey_high-dimensional_2016}, where Tikhonov regularization of $\hat \Sigma$ is used; just like the \emph{Schafer} statistic.
-We also try a diagonalized LDA~\cite{dudoit_comparison_2002}, also known as \emph{Gaussian Na\"ive Bayes}, which regularizes similarly to the \emph{Srivastava} and \emph{Goeman} statistics.
+We also try a diagonalized LDA~\cite{dudoit_comparison_2002}, also known as \emph{Gaussian Na\"ive Bayes}, which regularizes by thresholding, similarly to the \emph{Srivastava} and \emph{Goeman} statistics.
 
 Simulation results are reported in Figure~\ref{fig:highdim} with naming conventions in Table~\ref{tab:collected_3}.
 The proper regularization of the covariance of a classifier, just like a two-group test, can improve power. 
@@ -775,9 +775,11 @@ See, for instance, \emph{svm.CV.c001} which is clearly the best regularized SVM 
 Replacing the V-fold  with a bootstrap allows us to further increase the power, as done with \emph{lda.highdim.Pang.b50}.
 Even so, the out-of-the-box two-group tests outperform the accuracy-tests.
 
-Optimizing the regularization parameter for classification does not result in a good test, as can be seem from the performance of \emph{svm.CV.cCV}.
+Optimizing the regularization parameter for classification does not result in a good test, as can be seem from the performance.
 In SVMs, the cost parameter governs the magnitude of the margins, and thus the regularization. 
-In \emph{svm.CV.cCV} this regularization is optimized with CV which leads us to argue that the optimal regularization for prediction is not the same as the optimal for testing.
+The  \emph{svm.CV.cCV} statistic has a cost parameter optimized with an inner CV. 
+The \emph{svm.CV.c001} statistic has a large fixed regularization.
+The better power of \emph{svm.CV.c001} leads us to argue that the optimal regularization for prediction is not the same as the optimal for testing.
 
 \bigskip
 
